Wittner: erster Test der Release - ein kleiner Verbesserungsvorschlag