@@ -8,3 +8,13 @@ Git-Repos OK Klassendiagramm: Es bestehen zuviele Abhängigkeiten zwischen View 
 Thermometers anzeigen will übergebe ich nicht das Thermometer an die View, sondern nur den Wert der angezeigt werden
 soll. Bei Ihnen wird ein Spieler an die View übergeben, obwohl nur der Spielername benötigt wird! Und das setzt bei
 allen Klassen fort!
+
+## 10.2.2022: Wittner
+In der Readme.md könnte noch beschrieben werden, welche Einstellungen notwendig sind, damit das
+Projekt ausgeführt werden kann.
+
+"--module-path "\path\to\javafx-sdk-17\lib" --add-modules javafx.controls,javafx.fxml" usw.
+
+Na - das lässt sich ja ganz nett spielen!!!! Super gemacht
+
+Schön wäre es, wenn die Namen und die Farbe noch über ein Menü angepasst werden könnten.
